--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,8 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="TodoLists\Queries\" />
 		<Folder Include="WeatherForecasts\" />
-		<Folder Include="TodoLists\" />
 	</ItemGroup>
 
 </Project>
